--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "ws": "^7.3.1"
   },
   "dependencies": {},
-  "scripts": {}
+  "scripts": {
+    "start": "node ./scripts/start.js",
+    "build": "node ./scripts/build.js",
+    "addPage": "node ./scripts/addPage.js"
+  }
 }
