--- a/package.json
+++ b/package.json
@@ -3,11 +3,21 @@
   "version": "1.0.0",
   "license": "MIT",
   "private": true,
+  "description": "react multi page app",
   "devDependencies": {
+    "@babel/core": "^7.11.0",
+    "@babel/preset-env": "^7.11.0",
+    "@babel/preset-react": "^7.10.4",
+    "@babel/preset-typescript": "^7.10.4",
+    "@types/react": "^16.9.44",
+    "@types/react-dom": "^16.9.8",
+    "babel-loader": "^8.1.0",
     "css-loader": "^4.0.0",
     "html-webpack-plugin": "^4.3.0",
     "memory-fs": "^0.5.0",
     "mime": "^2.4.6",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "style-loader": "^1.2.1",
     "webpack": "^4.44.0",
     "ws": "^7.3.1"
