chore:update lock

--- a/package.json
+++ b/package.json
@@ -27,5 +27,6 @@
     "start": "node ./scripts/start.js",
     "build": "node ./scripts/build.js",
     "addPage": "node ./scripts/addPage.js"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
